personal-website-v2/infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edson-portfolio
  labels:
    name: edson-portfolio
    environment: production
